--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Chukwuka Emi",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -26,7 +26,7 @@
     "typeorm:cli": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli -f ./ormconfig.ts",
     "run:migration": "yarn run typeorm:cli migration:run",
     "revert:migration": "yarn run typeorm:cli migration:revert",
-    "migration-generate": "yarn run typeorm:cli -- migration:generate -n"
+    "migration-generate": "yarn run typeorm:cli migration:generate -n"
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.7",
